fixed errors in jshint

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
         }
         footer span { float: right; font-style: italic; }
 
-        /* Smartphones (portrait) */
+        /* portrait mode */
         @media only screen and (max-width: 480px) {
             body { font-size: 12px;}
             header p { padding-left: 4.5em;}
         }
     </style>
-<!--     only loads when the media is set to print-->
+<!--     loads whenmedia is set to print-->
  <link href="css/print.css" rel="stylesheet" media="print">
 
   </head>
@@ -66,7 +66,7 @@
   <body>
     <header>
       <a href="/"><img src="img/profilepic.jpg"></a>
-      <p>Cameron Pittman Rocks<br><span>Course Developer</span></p>
+      <p>Cameron Pittman Rocks!!!<br><span>Course Developer</span></p>
     </header>
 
     <div class="container">
